# speakpy

./: README.md  install.bash  main.py  pyproject.toml
data/: voices.json
data/models/: .gitignore
src/speakpy/: config.py  notify.py  server.py  synthesizer.py
